# research-agent

./: .gitignore  Makefile  README.md  pyproject.toml
src/research_agent/: __init__.py  models.py  pipeline.py  searcher.py  synthesizer.py
tests/: test_models.py  test_pipeline.py  test_searcher.py  test_synthesizer.py
